--- a/samplesite/bboard/templates/bboard/index.html
+++ b/samplesite/bboard/templates/bboard/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Объявления</h1>
         <div>
-            <a href="”/bboard/">Главная</a>
+            <a href="/bboard/">Главная</a>
             {% for rubric in rubrics %}
             <a href="/bboard/{{ rubric.pk }}/">{{ rubric.name }}</a>
             {% endfor %}
