--- a/samplesite/bboard/templates/bboard/create.html
+++ b/samplesite/bboard/templates/bboard/create.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Добовление объявления :: Доска объявлений</title>
-    </head>
-    <body>
-        <h1>Добавление объявления</h1>
-        <div>
-            <a href="{% url 'index' %}">Главная</a>
-            {% for rubric in rubrics %}
-            <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.nsme }}</a>
-            {% endfor %}
-        </div>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Добавить">
-        </form>
-    </body>
-</html>
+{% extends 'layout/basic.html' %}
+
+{% block title %} Добовление объявления {% endblock %}
+
+{% block content %}
+<h2>Добовление объявления</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Добавить">
+</form>
+{% endblock %}
