Использование get_absolute_url

--- a/samplesite/bboard/templates/bboard/index.html
+++ b/samplesite/bboard/templates/bboard/index.html
@@ -6,7 +6,7 @@
     <h2>{{ bb.title }}</h2>
     <p>{{ bb.content }}</p>
     <p>{{ bb.title_and_price }}</p>
-    <p><a href="{% url 'by_rubric' bb.rubric.pk %}">{{ bb.rubric.name }}</a></p>
+    <p><a href="{{ bb.rubric.get_absolute_url }}">{{ bb.rubric.name }}</a></p>
     <p>{{ bb.published|date:'d.m.Y H:i:s'}}</p>
 </div>
 {% endfor %}
