--- a/samplesite/bboard/templates/bboard/create.html
+++ b/samplesite/bboard/templates/bboard/create.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <h2>Добовление объявления</h2>
-<form action="{% url 'add_save' %}" method="post">
+
+<form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Добавить">
