--- a/samplesite/bboard/templates/bboard/index.html
+++ b/samplesite/bboard/templates/bboard/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% for bb in bbs %}
 <div>
-    <h2>{{ bb.title }}</h2>
+    <h2><a href="{% url 'detail' pk=bb.pk %}">{{ bb.title }}</a></h2>
     <p>{{ bb.content }}</p>
     <p>{{ bb.title_and_price }}</p>
     <p><a href="{{ bb.rubric.get_absolute_url }}">{{ bb.rubric.name }}</a></p>
