--- a/samplesite/bboard/templates/bboard/bb_detail.html
+++ b/samplesite/bboard/templates/bboard/bb_detail.html
@@ -8,4 +8,5 @@
 <p>{{ bb.content }}</p>
 <p>Цена: {{ bb.price }}</p>
 <a href="{% url 'edit' pk=bb.pk %}">Изменить</a>
+<p><a href="{% url 'delete' pk=bb.pk %}">Удалить</a></p>
 {% endblock %}
