--- a/samplesite/bboard/templates/bboard/index.html
+++ b/samplesite/bboard/templates/bboard/index.html
@@ -6,6 +6,17 @@
     {{ d.day }}
     {% endfor %}
 </p>
+<div>
+    {% if page.has_previous %}
+    <a href="?page={{ page.previous_page_number }}">&lt;</a>
+    &nbsp; &nbsp; | &nbsp; &nbsp;
+    {% endif %}
+    Часть №{{ page.number }} из {{ page.paginator.num_pages }}
+    {% if page.has_next %}
+    &nbsp; &nbsp; | &nbsp; &nbsp;
+    <a href="?page={{ page.next_page_number }}">&gt;</a>
+    {% endif %}
+</div>
 {% for bb in bbs %}
 <div class="{% cycle 'bb1' 'bb2' 'bb3' 'bb4' %}">
     <h2><a href="{% url 'detail' pk=bb.pk %}">{{ bb.title }} {{ forloop.counter }}</a></h2>
