--- a/samplesite/bboard/templates/bboard/create.html
+++ b/samplesite/bboard/templates/bboard/create.html
@@ -7,7 +7,30 @@
 
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+
+    {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+    {% endfor %}
+
+    {% if form.non_field_errors %}
+        <ul>
+            {% for error in form.non_field_errors %}
+            <li><em>{{ error|escape }}</em></li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% for field in form.visible_fields %}
+        {% if field.errors %}
+        <ul>
+            {% for error in field.errors %}
+            <li><em>{{ error|escape }}</em></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        <p>{{ field.label_tag }}<br>{{ field }}<br>{{ field.help_text }}</p>
+    {% endfor %}
+
     <input type="submit" value="Добавить">
 </form>
 {% endblock %}
