--- a/samplesite/bboard/templates/bboard/bb_edit_rubric_form.html
+++ b/samplesite/bboard/templates/bboard/bb_edit_rubric_form.html
@@ -6,7 +6,7 @@
 <form method="post">
     {% csrf_token %}
     <table>
-        {{ formset }}
+        {{ formset.as_p }}
     </table>
     <input type="submit" value="Сохранить">
 </form>
